--- a/index.html
+++ b/index.html
@@ -32,6 +32,48 @@
       },
     }
     </script>
+    <style>
+      /* Google Translate Widget Styling */
+      .skiptranslate {
+          display: none !important;
+      }
+      body {
+          top: 0px !important; /* Prevents Google's top banner */
+      }
+      #google_translate_element {
+          display: flex;
+          align-items: center;
+      }
+      #google_translate_element select {
+          background-color: #1e1e1e; /* gray-800 */
+          color: #e5e7eb; /* gray-200 */
+          border: 1px solid #4a4a4a; /* gray-600 */
+          border-radius: 0.375rem; /* rounded-md */
+          padding: 0.3rem 0.5rem;
+          font-size: 0.75rem; /* text-xs */
+          font-weight: 500; /* font-medium */
+          cursor: pointer;
+          -webkit-appearance: none;
+          -moz-appearance: none;
+          appearance: none;
+          background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%239ca3af%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22/%3E%3C/svg%3E');
+          background-repeat: no-repeat;
+          background-position: right 0.5rem center;
+          background-size: 0.65em auto;
+          padding-right: 2rem;
+      }
+      .goog-te-gadget {
+          font-family: inherit !important;
+          font-size: 1rem !important;
+          color: #e5e7eb !important;
+      }
+      .goog-te-banner-frame.skiptranslate {
+          display: none !important;
+      }
+      iframe.goog-te-banner-frame {
+          display: none !important;
+      }
+    </style>
     <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/recharts@2.12.7/umd/Recharts.min.js"></script>
